force-app/main/default/objects/TRSBuying__c/TRSBuying__c.object-meta.xml
<CustomObject>
    <label>TRS Buying</label>
    <nameField>
        <displayFormat>TB-{000000}</displayFormat>
        <label>TRS Buying ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRS Buying</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>