force-app/main/default/objects/TRSBuying__c/fields/AccountedDate__c.field-meta.xml
<CustomField>
    <fullName>AccountedDate__c</fullName>
    <inlineHelpText>Choose the correct date you want to put this cost in which month (used for accounting purpose).</inlineHelpText>
    <label>Accounted Date</label>
    <type>Date</type>
</CustomField>