force-app/main/default/objects/TRSBuying__c/fields/BankAccountforPayment__c.field-meta.xml
<CustomField>
    <fullName>BankAccountforPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account for Payment</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingBank</relationshipName>
    <type>Lookup</type>
</CustomField>