force-app/main/default/objects/TRSBuying__c/fields/BeneficiaryCompany__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the actual Account you TRF money to</inlineHelpText>
    <label>Beneficiary-Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRS Buying (Beneficiary-Buying)</relationshipLabel>
    <relationshipName>TRSBuyingBeneficiary</relationshipName>
    <type>Lookup</type>
</CustomField>