force-app/main/default/objects/TRSBuying__c/fields/Chargequantity__c.field-meta.xml
<CustomField>
    <fullName>Chargequantity__c</fullName>
    <label>Charge quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>