force-app/main/default/objects/TRSBuying__c/fields/ContainerInformation__c.field-meta.xml
<CustomField>
    <fullName>ContainerInformation__c</fullName>
    <label>Container Information</label>
    <type>TextArea</type>
</CustomField>