force-app/main/default/objects/TRSBuying__c/fields/GOODSSALESORDER__c.field-meta.xml
<CustomField>
    <fullName>GOODSSALESORDER__c</fullName>
    <label>GOODS SALES ORDER</label>
    <referenceTo>SALES_ORDER__c</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingGoodSO</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>