force-app/main/default/objects/TRSBuying__c/fields/LiftOffCost__c.field-meta.xml
<CustomField>
    <fullName>LiftOffCost__c</fullName>
    <inlineHelpText>This Cost include VAT already (Pay on behalf).</inlineHelpText>
    <label>Lift Off Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>