force-app/main/default/objects/TRSBuying__c/fields/LiftOnCost__c.field-meta.xml
<CustomField>
    <fullName>LiftOnCost__c</fullName>
    <inlineHelpText>This Cost include VAT already (Pay on behalf).</inlineHelpText>
    <label>Lift On Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>