force-app/main/default/objects/TRSBuying__c/fields/PackingDate__c.field-meta.xml
<CustomField>
    <fullName>PackingDate__c</fullName>
    <label>Packing Date</label>
    <type>Date</type>
</CustomField>