force-app/main/default/objects/TRSBuying__c/fields/Paymentto__c.field-meta.xml
<CustomField>
    <fullName>Paymentto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input Vendor/Supplier Name who you buy this service from.</inlineHelpText>
    <label>Payment to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingvendor</relationshipName>
    <type>Lookup</type>
</CustomField>