force-app/main/default/objects/TRSBuying__c/fields/PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRODUCT</label>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipLabel>TRS Buying</relationshipLabel>
    <relationshipName>TRSBuyingproduct</relationshipName>
    <type>Lookup</type>
</CustomField>