force-app/main/default/objects/TRSBuying__c/fields/Taxratebuying__c.field-meta.xml
<CustomField>
    <fullName>Taxratebuying__c</fullName>
    <label>Tax rate-buying</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>