force-app/main/default/objects/TRSBuying__c/fields/TotalTruckingCostinclVATfor__c.field-meta.xml
<CustomField>
    <fullName>TotalTruckingCostinclVATfor__c</fullName>
    <formula>TruckingCost__c  +  TruckingCost__c  *  Chargequantity__c  *  Taxratebuying__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Trucking Cost(incl VAT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>