force-app/main/default/objects/TRSBuying__c/fields/TruckingCost__c.field-meta.xml
<CustomField>
    <fullName>TruckingCost__c</fullName>
    <label>Trucking Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>