force-app/main/default/objects/TRSBuying__c/fields/UnitBuyingPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitBuyingPrice__c</fullName>
    <label>Unit Buying Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>