force-app/main/default/objects/TRSBuying__c/recordTypes/BuyingDocuments.recordType-meta.xml
<RecordType>
    <fullName>BuyingDocuments</fullName>
    <active>true</active>
    <label>Buying-Documents</label>
</RecordType>