force-app/main/default/objects/TRSBuying__c/recordTypes/BuyingOthers.recordType-meta.xml
<RecordType>
    <fullName>BuyingOthers</fullName>
    <active>true</active>
    <label>Buying-Others</label>
</RecordType>