force-app/main/default/objects/TRSBuying__c/recordTypes/BuyingPurchasing.recordType-meta.xml
<RecordType>
    <fullName>BuyingPurchasing</fullName>
    <active>true</active>
    <label>Buying-Purchasing</label>
</RecordType>