force-app/main/default/objects/TRSBuying__c/listViews/UpdateAPPurchasingExpense.listView-meta.xml
<ListView>
    <fullName>UpdateAPPurchasingExpense</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Paymentto__c</columns>
    <columns>Chargequantity__c</columns>
    <columns>ChargeUnit__c</columns>
    <columns>LiftOnCost__c</columns>
    <columns>LiftOffCost__c</columns>
    <columns>TruckingCost__c</columns>
    <columns>AmountBuyinginclTaxfor__c</columns>
    <columns>PaymentConfirmedBuying__c</columns>
    <columns>AmountPaidBuyingLocal__c</columns>
    <columns>UnpaidBalanceofBuying__c</columns>
    <columns>PaymentSettledDateBuying__c</columns>
    <columns>PaymentTypeBuying__c</columns>
    <columns>PaymentNotesBuying__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TRSBuying__c.BuyingPurchasing</value>
    </filters>
    <label>2. Update AP-Purchasing Expense</label>
</ListView>