force-app/main/default/objects/TRSBuying__c/listViews/X1_Update_AP_Documents_Expense.listView-meta.xml
<ListView>
    <fullName>X1_Update_AP_Documents_Expense</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Paymentto__c</columns>
    <columns>Chargequantity__c</columns>
    <columns>ChargeUnit__c</columns>
    <columns>UnitBuyingPrice__c</columns>
    <columns>AmountBuyinginclTaxfor__c</columns>
    <columns>PaymentConfirmedBuying__c</columns>
    <columns>AmountPaidBuyingLocal__c</columns>
    <columns>UnpaidBalanceofBuying__c</columns>
    <columns>PaymentSettledDateBuying__c</columns>
    <columns>PaymentTypeBuying__c</columns>
    <columns>PaymentNotesBuying__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TRSBuying__c.BuyingDocuments</value>
    </filters>
    <label>1. Update AP-Documents Expense</label>
</ListView>